- Modifiaciones en el diseño de las vistas. - Corregir problema con las imágenes de fondo.

--- a/MvcWebMusica2/Views/Albumes/Create.cshtml
+++ b/MvcWebMusica2/Views/Albumes/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model MvcWebMusica2.Models.Albumes
 
 @{
-    ViewData["Title"] = "Crear Albumes";
+    ViewData["Title"] = "Añadir Albumes";
 }
 
 <h1>Añadir</h1>
@@ -13,6 +13,10 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
+                <label asp-for="GruposId" class="control-label"></label>
+                <select asp-for="GruposId" class ="form-control" asp-items="ViewBag.GruposId"></select>
+            </div>
+            <div class="form-group">
                 <label asp-for="Nombre" class="control-label"></label>
                 <input asp-for="Nombre" class="form-control" />
                 <span asp-validation-for="Nombre" class="text-danger"></span>
@@ -20,10 +24,6 @@
             <div class="form-group">
                 <label asp-for="GenerosId" class="control-label"></label>
                 <select asp-for="GenerosId" class ="form-control" asp-items="ViewBag.GenerosId"></select>
-            </div>
-            <div class="form-group">
-                <label asp-for="GruposId" class="control-label"></label>
-                <select asp-for="GruposId" class ="form-control" asp-items="ViewBag.GruposId"></select>
             </div>
             <div class="form-group">
                 <label asp-for="Fecha" class="control-label"></label>
