--- a/MvcWebMusica2/Views/Canciones/Create.cshtml
+++ b/MvcWebMusica2/Views/Canciones/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model MvcWebMusica2.Models.Canciones
 
 @{
-    ViewData["Title"] = "Crear Canciones";
+    ViewData["Title"] = "Añadir Canciones";
 }
 
 <h1>Añadir</h1>
