--- a/MvcWebMusica2/Views/Ciudades/Create.cshtml
+++ b/MvcWebMusica2/Views/Ciudades/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model MvcWebMusica2.Models.Ciudades
 
 @{
-    ViewData["Title"] = "Create de Ciudades";
+    ViewData["Title"] = "Añadir Ciudades";
 }
 
 <h1>Añadir</h1>
