--- a/MvcWebMusica2/Views/Ciudades/Delete.cshtml
+++ b/MvcWebMusica2/Views/Ciudades/Delete.cshtml
@@ -1,12 +1,12 @@
 ﻿@model MvcWebMusica2.Models.Ciudades
 
 @{
-    ViewData["Title"] = "Delete de Ciudades";
+    ViewData["Title"] = "Borrar Ciudades";
 }
 
 <h1>Borrar</h1>
 
-<h3>¿Está segurro de borrar esta entrada?</h3>
+<h3>¿Está segurro de borrar esta ciudad?</h3>
 <div>
     <h4>Ciudades</h4>
     <hr />
