--- a/MvcWebMusica2/Views/Ciudades/Edit.cshtml
+++ b/MvcWebMusica2/Views/Ciudades/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model MvcWebMusica2.Models.Ciudades
 
 @{
-    ViewData["Title"] = "Edit de Ciudades";
+    ViewData["Title"] = "Editar Ciudades";
 }
 
 <h1>Editar</h1>
