--- a/MvcWebMusica2/Views/Ciudades/Index.cshtml
+++ b/MvcWebMusica2/Views/Ciudades/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<MvcWebMusica2.Models.Ciudades>
 
 @{
-    ViewData["Title"] = "Index de Ciudades";
+    ViewData["Title"] = "Ciudades";
 }
 
 <h1>Ciudades</h1>
