--- a/MvcWebMusica2/Views/Conciertos/Create.cshtml
+++ b/MvcWebMusica2/Views/Conciertos/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model MvcWebMusica2.Models.Conciertos
 
 @{
-    ViewData["Title"] = "Create de Conciertos";
+    ViewData["Title"] = "Añadir Conciertos";
 }
 
 <h1>Añadir</h1>
