--- a/MvcWebMusica2/Views/Conciertos/Edit.cshtml
+++ b/MvcWebMusica2/Views/Conciertos/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model MvcWebMusica2.Models.Conciertos
 
 @{
-    ViewData["Title"] = "Edit de Conciertos";
+    ViewData["Title"] = "Editar Conciertos";
 }
 
 <h1>Editar</h1>
