--- a/MvcWebMusica2/Views/Empleados/Delete.cshtml
+++ b/MvcWebMusica2/Views/Empleados/Delete.cshtml
@@ -1,12 +1,12 @@
 ﻿@model MvcWebMusica2.Models.Empleados
 
 @{
-    ViewData["Title"] = "Delete de Empleados";
+    ViewData["Title"] = "Borrar Empleados";
 }
 
 <h1>Borrar</h1>
 
-<h3>¿Está segurro de borrar esta entrada?</h3>
+<h3>¿Está segurro de borrar este empleado?</h3>
 <div>
     <h4>Empleados</h4>
     <hr />
