--- a/MvcWebMusica2/Views/Empleados/Details.cshtml
+++ b/MvcWebMusica2/Views/Empleados/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model MvcWebMusica2.Models.Empleados
 
 @{
-    ViewData["Title"] = "Details de Empleados";
+    ViewData["Title"] = "Detalles de Empleados";
 }
 
 <h1>Detalles</h1>
