--- a/MvcWebMusica2/Views/Empleados/Edit.cshtml
+++ b/MvcWebMusica2/Views/Empleados/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model MvcWebMusica2.Models.Empleados
 
 @{
-    ViewData["Title"] = "Edit de Empleados";
+    ViewData["Title"] = "Editar Empleados";
 }
 
 <h1>Editar</h1>
