--- a/MvcWebMusica2/Views/Empleados/Index.cshtml
+++ b/MvcWebMusica2/Views/Empleados/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<MvcWebMusica2.Models.Empleados>
 
 @{
-    ViewData["Title"] = "Index de Empleados";
+    ViewData["Title"] = "Empleados";
 }
 
 <h1>Empleados</h1>
