--- a/MvcWebMusica2/Views/Funciones/Create.cshtml
+++ b/MvcWebMusica2/Views/Funciones/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model MvcWebMusica2.Models.Funciones
 
 @{
-    ViewData["Title"] = "Create de Funciones";
+    ViewData["Title"] = "Añadir Funciones";
 }
 
 <h1>Añadir</h1>
