--- a/MvcWebMusica2/Views/Funciones/Delete.cshtml
+++ b/MvcWebMusica2/Views/Funciones/Delete.cshtml
@@ -1,12 +1,12 @@
 ﻿@model MvcWebMusica2.Models.Funciones
 
 @{
-    ViewData["Title"] = "Delete de Funciones";
+    ViewData["Title"] = "Borrar Funciones";
 }
 
 <h1>Borrar</h1>
 
-<h3>¿Está segurro de borrar esta entrada?</h3>
+<h3>¿Está segurro de borrar esta función?</h3>
 <div>
     <h4>Funciones</h4>
     <hr />
