--- a/MvcWebMusica2/Views/Funciones/Details.cshtml
+++ b/MvcWebMusica2/Views/Funciones/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model MvcWebMusica2.Models.Funciones
 
 @{
-    ViewData["Title"] = "Details de Funciones";
+    ViewData["Title"] = "Detalles de Funciones";
 }
 
 <h1>Detalles</h1>
