--- a/MvcWebMusica2/Views/Funciones/Edit.cshtml
+++ b/MvcWebMusica2/Views/Funciones/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model MvcWebMusica2.Models.Funciones
 
 @{
-    ViewData["Title"] = "Edit de Funciones";
+    ViewData["Title"] = "Editar Funciones";
 }
 
 <h1>Editar</h1>
