--- a/MvcWebMusica2/Views/Funciones/Index.cshtml
+++ b/MvcWebMusica2/Views/Funciones/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<MvcWebMusica2.Models.Funciones>
 
 @{
-    ViewData["Title"] = "Index de Funciones";
+    ViewData["Title"] = "Funciones";
 }
 
 <h1>Funciones</h1>
