--- a/MvcWebMusica2/Views/FuncionesArtistas/Delete.cshtml
+++ b/MvcWebMusica2/Views/FuncionesArtistas/Delete.cshtml
@@ -1,14 +1,14 @@
 ﻿@model MvcWebMusica2.Models.FuncionesArtistas
 
 @{
-    ViewData["Title"] = "Delete de Funciones/Artistas";
+    ViewData["Title"] = "Borrar Funciones/Artistas";
 }
 
 <h1>Borrar</h1>
 
-<h3>¿Está segurro de borrar esta entrada?</h3>
+<h3>¿Está segurro de borrar esta función/artista?</h3>
 <div>
-    <h4>FuncionesArtistas</h4>
+    <h4>Funciones / Artistas</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
