--- a/MvcWebMusica2/Views/FuncionesArtistas/Details.cshtml
+++ b/MvcWebMusica2/Views/FuncionesArtistas/Details.cshtml
@@ -1,13 +1,13 @@
 ﻿@model MvcWebMusica2.Models.FuncionesArtistas
 
 @{
-    ViewData["Title"] = "Details de Funciones/Artistas";
+    ViewData["Title"] = "Detalles de Funciones/Artistas";
 }
 
 <h1>Detalles</h1>
 
 <div>
-    <h4>FuncionesArtistas</h4>
+    <h4>Funciones / Artistas</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
