--- a/MvcWebMusica2/Views/Generos/Create.cshtml
+++ b/MvcWebMusica2/Views/Generos/Create.cshtml
@@ -1,12 +1,12 @@
 ﻿@model MvcWebMusica2.Models.Generos
 
 @{
-    ViewData["Title"] = "Create de Géneros";
+    ViewData["Title"] = "Añadir Géneros Musicales";
 }
 
 <h1>Añadir</h1>
 
-<h4>Generos</h4>
+<h4>Géneros Musicales</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
