--- a/MvcWebMusica2/Views/Generos/Details.cshtml
+++ b/MvcWebMusica2/Views/Generos/Details.cshtml
@@ -1,13 +1,13 @@
 ﻿@model MvcWebMusica2.Models.Generos
 
 @{
-    ViewData["Title"] = "Details de Géneros";
+    ViewData["Title"] = "Detalles de Géneros Musicales";
 }
 
 <h1>Detalles</h1>
 
 <div>
-    <h4>Generos</h4>
+    <h4>Generos Musicales</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
