--- a/MvcWebMusica2/Views/Generos/Edit.cshtml
+++ b/MvcWebMusica2/Views/Generos/Edit.cshtml
@@ -1,12 +1,12 @@
 ﻿@model MvcWebMusica2.Models.Generos
 
 @{
-    ViewData["Title"] = "Edit de Géneros";
+    ViewData["Title"] = "Editar Géneros Musicales";
 }
 
 <h1>Editar</h1>
 
-<h4>Generos</h4>
+<h4>Generos Musicales</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
