--- a/MvcWebMusica2/Views/Generos/Index.cshtml
+++ b/MvcWebMusica2/Views/Generos/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<MvcWebMusica2.Models.Generos>
 
 @{
-    ViewData["Title"] = "Index de Géneros";
+    ViewData["Title"] = "Géneros Musicales";
 }
 
-<h1>Géneros</h1>
+<h1>Géneros Musicales</h1>
 
 <p>
     <a asp-action="Create"><i class="ps-3 fs-3 fa-solid fa-file-circle-plus" title="Crear nueva entrada"></i></a>
