--- a/MvcWebMusica2/Views/Giras/Create.cshtml
+++ b/MvcWebMusica2/Views/Giras/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model MvcWebMusica2.Models.Giras
 
 @{
-    ViewData["Title"] = "Create de Giras";
+    ViewData["Title"] = "Añadir Giras";
 }
 
 <h1>Añadir</h1>
