--- a/MvcWebMusica2/Views/Giras/Edit.cshtml
+++ b/MvcWebMusica2/Views/Giras/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model MvcWebMusica2.Models.Giras
 
 @{
-    ViewData["Title"] = "Edit de Giras";
+    ViewData["Title"] = "Editar Giras";
 }
 
 <h1>Editar</h1>
