--- a/MvcWebMusica2/Views/Paises/Create.cshtml
+++ b/MvcWebMusica2/Views/Paises/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model MvcWebMusica2.Models.Paises
 
 @{
-    ViewData["Title"] = "Create de Paises";
+    ViewData["Title"] = "Añadir Paises";
 }
 
 <h1>Añadir</h1>
