--- a/MvcWebMusica2/Views/Paises/Delete.cshtml
+++ b/MvcWebMusica2/Views/Paises/Delete.cshtml
@@ -1,12 +1,12 @@
 ﻿@model MvcWebMusica2.Models.Paises
 
 @{
-    ViewData["Title"] = "Delete de Paises";
+    ViewData["Title"] = "Borrar Paises";
 }
 
 <h1>Borrar</h1>
 
-<h3>¿Está segurro de borrar esta entrada?</h3>
+<h3>¿Está segurro de borrar este país?</h3>
 <div>
     <h4>Paises</h4>
     <hr />
