--- a/MvcWebMusica2/Views/Paises/Details.cshtml
+++ b/MvcWebMusica2/Views/Paises/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model MvcWebMusica2.Models.Paises
 
 @{
-    ViewData["Title"] = "Details de Paises";
+    ViewData["Title"] = "Detalles de Paises";
 }
 
 <h1>Detalles</h1>
