--- a/MvcWebMusica2/Views/Paises/Index.cshtml
+++ b/MvcWebMusica2/Views/Paises/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<MvcWebMusica2.Models.Paises>
 
 @{
-    ViewData["Title"] = "Index de Paises";
+    ViewData["Title"] = "Paises";
 }
 
 <h1>Paises</h1>
