--- a/MvcWebMusica2/Views/Plataformas/Create.cshtml
+++ b/MvcWebMusica2/Views/Plataformas/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model MvcWebMusica2.Models.Plataformas
 
 @{
-    ViewData["Title"] = "Create de Plataformas";
+    ViewData["Title"] = "Añadir Plataformas";
 }
 
 <h1>Añadir</h1>
