--- a/MvcWebMusica2/Views/Plataformas/Details.cshtml
+++ b/MvcWebMusica2/Views/Plataformas/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model MvcWebMusica2.Models.Plataformas
 
 @{
-    ViewData["Title"] = "Details de Plataformas";
+    ViewData["Title"] = "Detalles de Plataformas";
 }
 
 <h1>Detalles</h1>
