--- a/MvcWebMusica2/Views/Plataformas/Edit.cshtml
+++ b/MvcWebMusica2/Views/Plataformas/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model MvcWebMusica2.Models.Plataformas
 
 @{
-    ViewData["Title"] = "Edit de Plataformas";
+    ViewData["Title"] = "Editar Plataformas";
 }
 
 <h1>Editar</h1>
