--- a/MvcWebMusica2/Views/Roles/Create.cshtml
+++ b/MvcWebMusica2/Views/Roles/Create.cshtml
@@ -1,12 +1,12 @@
 ﻿@model MvcWebMusica2.Models.Roles
 
 @{
-    ViewData["Title"] = "Create de Roles";
+    ViewData["Title"] = "Añadir Roles";
 }
 
 <h1>Añadir</h1>
 
-<h4>Roles</h4>
+<h4>Roles Empleados</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
