--- a/MvcWebMusica2/Views/Roles/Details.cshtml
+++ b/MvcWebMusica2/Views/Roles/Details.cshtml
@@ -1,13 +1,13 @@
 ﻿@model MvcWebMusica2.Models.Roles
 
 @{
-    ViewData["Title"] = "Details de Roles";
+    ViewData["Title"] = "Detalles de Roles";
 }
 
 <h1>Detalles</h1>
 
 <div>
-    <h4>Roles</h4>
+    <h4>Roles Empleados</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
