--- a/MvcWebMusica2/Views/Roles/Edit.cshtml
+++ b/MvcWebMusica2/Views/Roles/Edit.cshtml
@@ -1,12 +1,12 @@
 ﻿@model MvcWebMusica2.Models.Roles
 
 @{
-    ViewData["Title"] = "Edit de Roles";
+    ViewData["Title"] = "Editar Roles";
 }
 
 <h1>Editar</h1>
 
-<h4>Roles</h4>
+<h4>Roles Empleados</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
