--- a/MvcWebMusica2/Views/Roles/Index.cshtml
+++ b/MvcWebMusica2/Views/Roles/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<MvcWebMusica2.Models.Roles>
 
 @{
-    ViewData["Title"] = "Index de Roles";
+    ViewData["Title"] = "Roles Empleados";
 }
 
-<h1>Roles</h1>
+<h1>Roles Empleados</h1>
 
 <p>
     <a asp-action="Create"><i class="ps-3 fs-3 fa-solid fa-file-circle-plus" title="Crear nueva entrada"></i></a>
