--- a/MvcWebMusica2/Views/VideoClips/Edit.cshtml
+++ b/MvcWebMusica2/Views/VideoClips/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model MvcWebMusica2.Models.VideoClips
 
 @{
-    ViewData["Title"] = "Edit de VideoClips";
+    ViewData["Title"] = "Editar VideoClips";
 }
 
 <h1>Editar</h1>
