--- a/MvcWebMusica2/Views/Albumes/Delete.cshtml
+++ b/MvcWebMusica2/Views/Albumes/Delete.cshtml
@@ -6,22 +6,22 @@
 
 <h1>Borrar</h1>
 
-<h3>¿Está segurro de borrar esta entrada?</h3>
+<h3>¿Está segurro de borrar este álbum?</h3>
 <div>
     <h4>Albumes</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Grupos)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Grupos.Id)
+        </dd>
+        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Nombre)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Nombre)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Fecha)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Fecha)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Generos)
@@ -30,10 +30,10 @@
             @Html.DisplayFor(model => model.Generos.Id)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Grupos)
+            @Html.DisplayNameFor(model => model.Fecha)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Grupos.Id)
+            @Html.DisplayFor(model => model.Fecha)
         </dd>
     </dl>
     
