--- a/MvcWebMusica2/Views/Artistas/Create.cshtml
+++ b/MvcWebMusica2/Views/Artistas/Create.cshtml
@@ -1,10 +1,10 @@
 ﻿@model MvcWebMusica2.Models.Artistas
 
 @{
-    ViewData["Title"] = "Crear Artistas";
+    ViewData["Title"] = "Añadir Artistas";
 }
 
-<h1>Create de Artistas</h1>
+<h1>Añadir</h1>
 
 <h4>Artistas</h4>
 <hr />
@@ -18,10 +18,6 @@
                 <span asp-validation-for="Nombre" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="GenerosId" class="control-label"></label>
-                <select asp-for="GenerosId" class ="form-control" asp-items="ViewBag.GenerosId"></select>
-            </div>
-            <div class="form-group">
                 <label asp-for="FechaDeNacimiento" class="control-label"></label>
                 <input asp-for="FechaDeNacimiento" class="form-control" />
                 <span asp-validation-for="FechaDeNacimiento" class="text-danger"></span>
@@ -33,6 +29,10 @@
             <div class="form-group">
                 <label asp-for="GruposId" class="control-label"></label>
                 <select asp-for="GruposId" class ="form-control" asp-items="ViewBag.GruposId"></select>
+            </div>
+            <div class="form-group">
+                <label asp-for="GenerosId" class="control-label"></label>
+                <select asp-for="GenerosId" class ="form-control" asp-items="ViewBag.GenerosId"></select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Añadir" class="btn btn-primary mt-3" />
