--- a/MvcWebMusica2/Views/Artistas/Delete.cshtml
+++ b/MvcWebMusica2/Views/Artistas/Delete.cshtml
@@ -4,9 +4,9 @@
     ViewData["Title"] = "Borrar Artistas";
 }
 
-<h1>Delete de Artistas</h1>
+<h1>Borrar</h1>
 
-<h3>¿Está segurro de borrar esta entrada?</h3>
+<h3>¿Está segurro de borrar este artista?</h3>
 <div>
     <h4>Artistas</h4>
     <hr />
@@ -30,16 +30,16 @@
             @Html.DisplayFor(model => model.Ciudades.Nombre)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Generos)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Generos.Nombre)
-        </dd>
-        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Grupos)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Grupos.Nombre)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Generos)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Generos.Nombre)
         </dd>
     </dl>
     
