--- a/MvcWebMusica2/Views/Artistas/Details.cshtml
+++ b/MvcWebMusica2/Views/Artistas/Details.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Detalles de Artistas";
 }
 
-<h1>Details de Artistas</h1>
+<h1>Detalles</h1>
 
 <div>
     <h4>Artistas</h4>
@@ -29,16 +29,16 @@
             @Html.DisplayFor(model => model.Ciudades.Nombre)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Generos)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Generos.Nombre)
-        </dd>
-        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Grupos)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Grupos.Nombre)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Generos)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Generos.Nombre)
         </dd>
     </dl>
 </div>
