--- a/MvcWebMusica2/Views/Artistas/Edit.cshtml
+++ b/MvcWebMusica2/Views/Artistas/Edit.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Editar Artistas";
 }
 
-<h1>Edit de Artistas</h1>
+<h1>Editar</h1>
 
 <h4>Artistas</h4>
 <hr />
@@ -17,11 +17,6 @@
                 <label asp-for="Nombre" class="control-label"></label>
                 <input asp-for="Nombre" class="form-control" />
                 <span asp-validation-for="Nombre" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="GenerosId" class="control-label"></label>
-                <select asp-for="GenerosId" class="form-control" asp-items="ViewBag.GenerosId"></select>
-                <span asp-validation-for="GenerosId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="FechaDeNacimiento" class="control-label"></label>
@@ -37,6 +32,11 @@
                 <label asp-for="GruposId" class="control-label"></label>
                 <select asp-for="GruposId" class="form-control" asp-items="ViewBag.GruposId"></select>
                 <span asp-validation-for="GruposId" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="GenerosId" class="control-label"></label>
+                <select asp-for="GenerosId" class="form-control" asp-items="ViewBag.GenerosId"></select>
+                <span asp-validation-for="GenerosId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Guardar" class="btn btn-primary mt-3" />
