--- a/MvcWebMusica2/Views/Ciudades/Details.cshtml
+++ b/MvcWebMusica2/Views/Ciudades/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model MvcWebMusica2.Models.Ciudades
 
 @{
-    ViewData["Title"] = "Details de Ciudades";
+    ViewData["Title"] = "Detalles de Ciudades";
 }
 
 <h1>Detalles</h1>
