--- a/MvcWebMusica2/Views/Conciertos/Delete.cshtml
+++ b/MvcWebMusica2/Views/Conciertos/Delete.cshtml
@@ -1,27 +1,27 @@
 ﻿@model MvcWebMusica2.Models.Conciertos
 
 @{
-    ViewData["Title"] = "Delete de Conciertos";
+    ViewData["Title"] = "Borrar Conciertos";
 }
 
 <h1>Borrar</h1>
 
-<h3>¿Está segurro de borrar esta entrada?</h3>
+<h3>¿Está segurro de borrar este concierto?</h3>
 <div>
     <h4>Conciertos</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Giras)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Giras.Nombre)
+        </dd>
+        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Fecha)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Fecha)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Direccion)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Direccion)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Ciudades)
@@ -30,10 +30,10 @@
             @Html.DisplayFor(model => model.Ciudades.Nombre)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Giras)
+            @Html.DisplayNameFor(model => model.Direccion)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Giras.Nombre)
+            @Html.DisplayFor(model => model.Direccion)
         </dd>
     </dl>
     
