--- a/MvcWebMusica2/Views/Empleados/Create.cshtml
+++ b/MvcWebMusica2/Views/Empleados/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model MvcWebMusica2.Models.Empleados
 
 @{
-    ViewData["Title"] = "Create de Empleados";
+    ViewData["Title"] = "Añadir Empleados";
 }
 
 <h1>Añadir</h1>
