--- a/MvcWebMusica2/Views/FuncionesArtistas/Create.cshtml
+++ b/MvcWebMusica2/Views/FuncionesArtistas/Create.cshtml
@@ -1,24 +1,24 @@
 ﻿@model MvcWebMusica2.Models.FuncionesArtistas
 
 @{
-    ViewData["Title"] = "Create de Funciones/Artistas";
+    ViewData["Title"] = "Añadir Funciones/Artistas";
 }
 
 <h1>Añadir</h1>
 
-<h4>FuncionesArtistas</h4>
+<h4>Funciones / Artistas</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="FuncionesId" class="control-label"></label>
-                <select asp-for="FuncionesId" class ="form-control" asp-items="ViewBag.FuncionesId"></select>
-            </div>
-            <div class="form-group">
                 <label asp-for="ArtistasId" class="control-label"></label>
                 <select asp-for="ArtistasId" class ="form-control" asp-items="ViewBag.ArtistasId"></select>
+            </div>
+            <div class="form-group">
+                <label asp-for="FuncionesId" class="control-label"></label>
+                <select asp-for="FuncionesId" class ="form-control" asp-items="ViewBag.FuncionesId"></select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Añadir" class="btn btn-primary mt-3" />
