--- a/MvcWebMusica2/Views/FuncionesArtistas/Edit.cshtml
+++ b/MvcWebMusica2/Views/FuncionesArtistas/Edit.cshtml
@@ -1,12 +1,12 @@
 ﻿@model MvcWebMusica2.Models.FuncionesArtistas
 
 @{
-    ViewData["Title"] = "Edit de Funciones/Artistas";
+    ViewData["Title"] = "Editar Funciones/Artistas";
 }
 
 <h1>Editar</h1>
 
-<h4>FuncionesArtistas</h4>
+<h4>Funciones / Artistas</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -14,14 +14,14 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
-                <label asp-for="FuncionesId" class="control-label"></label>
-                <select asp-for="FuncionesId" class="form-control" asp-items="ViewBag.FuncionesId"></select>
-                <span asp-validation-for="FuncionesId" class="text-danger"></span>
-            </div>
-            <div class="form-group">
                 <label asp-for="ArtistasId" class="control-label"></label>
                 <select asp-for="ArtistasId" class="form-control" asp-items="ViewBag.ArtistasId"></select>
                 <span asp-validation-for="ArtistasId" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="FuncionesId" class="control-label"></label>
+                <select asp-for="FuncionesId" class="form-control" asp-items="ViewBag.FuncionesId"></select>
+                <span asp-validation-for="FuncionesId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Guardar" class="btn btn-primary mt-3" />
