--- a/MvcWebMusica2/Views/FuncionesArtistas/Index.cshtml
+++ b/MvcWebMusica2/Views/FuncionesArtistas/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<MvcWebMusica2.Models.FuncionesArtistas>
 
 @{
-    ViewData["Title"] = "Index de Funciones/Artistas";
+    ViewData["Title"] = "Funciones/Artistas";
 }
 
-<h1>Funciones/Artistas</h1>
+<h1>Funciones / Artistas</h1>
 
 <p>
     <a asp-action="Create"><i class="ps-3 fs-3 fa-solid fa-file-circle-plus" title="Crear nueva entrada"></i></a>
