--- a/MvcWebMusica2/Views/Generos/Delete.cshtml
+++ b/MvcWebMusica2/Views/Generos/Delete.cshtml
@@ -1,14 +1,14 @@
 ﻿@model MvcWebMusica2.Models.Generos
 
 @{
-    ViewData["Title"] = "Delete de Géneros";
+    ViewData["Title"] = "Borrar Géneros Musicales";
 }
 
 <h1>Borrar</h1>
 
-<h3>¿Está segurro de borrar esta entrada?</h3>
+<h3>¿Está segurro de borrar este género musical?</h3>
 <div>
-    <h4>Generos</h4>
+    <h4>Generos Musicales</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
