--- a/MvcWebMusica2/Views/Grupos/Create.cshtml
+++ b/MvcWebMusica2/Views/Grupos/Create.cshtml
@@ -1,12 +1,12 @@
 ﻿@model MvcWebMusica2.Models.Grupos
 
 @{
-    ViewData["Title"] = "Create de Grupos";
+    ViewData["Title"] = "Añadir Grupos Musicales";
 }
 
 <h1>Añadir</h1>
 
-<h4>Grupos</h4>
+<h4>Grupos Musicales</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -23,6 +23,10 @@
                 </label>
             </div>
             <div class="form-group">
+                <label asp-for="GenerosId" class="control-label"></label>
+                <select asp-for="GenerosId" class ="form-control" asp-items="ViewBag.GenerosId"></select>
+            </div>
+            <div class="form-group">
                 <label asp-for="FechaCreacion" class="control-label"></label>
                 <input asp-for="FechaCreacion" class="form-control" />
                 <span asp-validation-for="FechaCreacion" class="text-danger"></span>
@@ -34,10 +38,6 @@
             <div class="form-group">
                 <label asp-for="RepresentantesId" class="control-label"></label>
                 <select asp-for="RepresentantesId" class ="form-control" asp-items="ViewBag.RepresentantesId"></select>
-            </div>
-            <div class="form-group">
-                <label asp-for="GenerosId" class="control-label"></label>
-                <select asp-for="GenerosId" class ="form-control" asp-items="ViewBag.GenerosId"></select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Añadir" class="btn btn-primary mt-3" />
