--- a/MvcWebMusica2/Views/Grupos/Delete.cshtml
+++ b/MvcWebMusica2/Views/Grupos/Delete.cshtml
@@ -1,14 +1,14 @@
 ﻿@model MvcWebMusica2.Models.Grupos
 
 @{
-    ViewData["Title"] = "Delete de Grupos";
+    ViewData["Title"] = "Borrar Grupos Musicales";
 }
 
 <h1>Borrar</h1>
 
-<h3>¿Está segurro de borrar esta entrada?</h3>
+<h3>¿Está segurro de borrar este grupo musical?</h3>
 <div>
-    <h4>Grupos</h4>
+    <h4>Grupos Musicales</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -24,6 +24,12 @@
             @Html.DisplayFor(model => model.grupo)
         </dd>
         <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Generos)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Generos.Nombre)
+        </dd>
+        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.FechaCreacion)
         </dt>
         <dd class = "col-sm-10">
@@ -34,12 +40,6 @@
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Ciudades.Nombre)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Generos)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Generos.Nombre)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Representantes)
