--- a/MvcWebMusica2/Views/Grupos/Details.cshtml
+++ b/MvcWebMusica2/Views/Grupos/Details.cshtml
@@ -1,13 +1,13 @@
 ﻿@model MvcWebMusica2.Models.Grupos
 
 @{
-    ViewData["Title"] = "Details de Grupos";
+    ViewData["Title"] = "Detalles de Grupos Musicales";
 }
 
 <h1>Detalles</h1>
 
 <div>
-    <h4>Grupos</h4>
+    <h4>Grupos Musicales</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -23,6 +23,12 @@
             @Html.DisplayFor(model => model.grupo)
         </dd>
         <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Generos)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Generos.Nombre)
+        </dd>
+        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.FechaCreacion)
         </dt>
         <dd class = "col-sm-10">
@@ -33,12 +39,6 @@
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Ciudades.Nombre)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Generos)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Generos.Nombre)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Representantes)
