--- a/MvcWebMusica2/Views/Grupos/Edit.cshtml
+++ b/MvcWebMusica2/Views/Grupos/Edit.cshtml
@@ -1,12 +1,12 @@
 ﻿@model MvcWebMusica2.Models.Grupos
 
 @{
-    ViewData["Title"] = "Edit de Grupos";
+    ViewData["Title"] = "Editar Grupos Musicales";
 }
 
 <h1>Editar</h1>
 
-<h4>Grupos</h4>
+<h4>Grupos Musicales</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -24,6 +24,11 @@
                 </label>
             </div>
             <div class="form-group">
+                <label asp-for="GenerosId" class="control-label"></label>
+                <select asp-for="GenerosId" class="form-control" asp-items="ViewBag.GenerosId"></select>
+                <span asp-validation-for="GenerosId" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="FechaCreacion" class="control-label"></label>
                 <input asp-for="FechaCreacion" class="form-control" />
                 <span asp-validation-for="FechaCreacion" class="text-danger"></span>
@@ -37,11 +42,6 @@
                 <label asp-for="RepresentantesId" class="control-label"></label>
                 <select asp-for="RepresentantesId" class="form-control" asp-items="ViewBag.RepresentantesId"></select>
                 <span asp-validation-for="RepresentantesId" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="GenerosId" class="control-label"></label>
-                <select asp-for="GenerosId" class="form-control" asp-items="ViewBag.GenerosId"></select>
-                <span asp-validation-for="GenerosId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Guardar" class="btn btn-primary mt-3" />
