--- a/MvcWebMusica2/Views/Paises/Edit.cshtml
+++ b/MvcWebMusica2/Views/Paises/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model MvcWebMusica2.Models.Paises
 
 @{
-    ViewData["Title"] = "Edit de Paises";
+    ViewData["Title"] = "Editar Paises";
 }
 
 <h1>Editar</h1>
