--- a/MvcWebMusica2/Views/Plataformas/Delete.cshtml
+++ b/MvcWebMusica2/Views/Plataformas/Delete.cshtml
@@ -1,12 +1,12 @@
 ﻿@model MvcWebMusica2.Models.Plataformas
 
 @{
-    ViewData["Title"] = "Delete de Plataformas";
+    ViewData["Title"] = "Borrar Plataformas";
 }
 
 <h1>Borrar</h1>
 
-<h3>¿Está segurro de borrar esta entrada?</h3>
+<h3>¿Está segurro de borrar esta plataforma?</h3>
 <div>
     <h4>Plataformas</h4>
     <hr />
