--- a/MvcWebMusica2/Views/Plataformas/Index.cshtml
+++ b/MvcWebMusica2/Views/Plataformas/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<MvcWebMusica2.Models.Plataformas>
 
 @{
-    ViewData["Title"] = "Index de Plataformas";
+    ViewData["Title"] = "Plataformas";
 }
 
 <h1>Plataformas</h1>
