--- a/MvcWebMusica2/Views/Representantes/Create.cshtml
+++ b/MvcWebMusica2/Views/Representantes/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model MvcWebMusica2.Models.Representantes
 
 @{
-    ViewData["Title"] = "Create de Representantes";
+    ViewData["Title"] = "Añadir Representantes";
 }
 
 <h1>Añadir</h1>
@@ -23,6 +23,10 @@
                 <span asp-validation-for="FechaNacimiento" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="CiudadesID" class="control-label"></label>
+                <select asp-for="CiudadesID" class ="form-control" asp-items="ViewBag.CiudadesID"></select>
+            </div>
+            <div class="form-group">
                 <label asp-for="Identificacion" class="control-label"></label>
                 <input asp-for="Identificacion" class="form-control" />
                 <span asp-validation-for="Identificacion" class="text-danger"></span>
@@ -36,10 +40,6 @@
                 <label asp-for="Telefono" class="control-label"></label>
                 <input asp-for="Telefono" class="form-control" />
                 <span asp-validation-for="Telefono" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="CiudadesID" class="control-label"></label>
-                <select asp-for="CiudadesID" class ="form-control" asp-items="ViewBag.CiudadesID"></select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Añadir" class="btn btn-primary mt-3" />
