--- a/MvcWebMusica2/Views/Representantes/Edit.cshtml
+++ b/MvcWebMusica2/Views/Representantes/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model MvcWebMusica2.Models.Representantes
 
 @{
-    ViewData["Title"] = "Edit de Representantes";
+    ViewData["Title"] = "Editar Representantes";
 }
 
 <h1>Editar</h1>
@@ -24,6 +24,11 @@
                 <span asp-validation-for="FechaNacimiento" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="CiudadesID" class="control-label"></label>
+                <select asp-for="CiudadesID" class="form-control" asp-items="ViewBag.CiudadesID"></select>
+                <span asp-validation-for="CiudadesID" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="Identificacion" class="control-label"></label>
                 <input asp-for="Identificacion" class="form-control" />
                 <span asp-validation-for="Identificacion" class="text-danger"></span>
@@ -37,11 +42,6 @@
                 <label asp-for="Telefono" class="control-label"></label>
                 <input asp-for="Telefono" class="form-control" />
                 <span asp-validation-for="Telefono" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="CiudadesID" class="control-label"></label>
-                <select asp-for="CiudadesID" class="form-control" asp-items="ViewBag.CiudadesID"></select>
-                <span asp-validation-for="CiudadesID" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Guardar" class="btn btn-primary mt-3" />
