--- a/MvcWebMusica2/Views/Roles/Delete.cshtml
+++ b/MvcWebMusica2/Views/Roles/Delete.cshtml
@@ -1,14 +1,14 @@
 ﻿@model MvcWebMusica2.Models.Roles
 
 @{
-    ViewData["Title"] = "Delete de Roles";
+    ViewData["Title"] = "Borrar Roles";
 }
 
 <h1>Borrar</h1>
 
-<h3>¿Está segurro de borrar esta entrada?</h3>
+<h3>¿Está segurro de borrar este rol?</h3>
 <div>
-    <h4>Roles</h4>
+    <h4>Roles Empleados</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
