--- a/MvcWebMusica2/Views/VideoClips/Delete.cshtml
+++ b/MvcWebMusica2/Views/VideoClips/Delete.cshtml
@@ -1,27 +1,27 @@
 ﻿@model MvcWebMusica2.Models.VideoClips
 
 @{
-    ViewData["Title"] = "Delete de VideoClips";
+    ViewData["Title"] = "Borrar VideoClips";
 }
 
 <h1>Borrar</h1>
 
-<h3>¿Está segurro de borrar esta entrada?</h3>
+<h3>¿Está segurro de borrar este videoclip?</h3>
 <div>
     <h4>VideoClips</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Fecha)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Fecha)
-        </dd>
-        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Canciones)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Canciones.Titulo)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Fecha)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Fecha)
         </dd>
     </dl>
     
