--- a/MvcWebMusica2/Views/VideoClips/Details.cshtml
+++ b/MvcWebMusica2/Views/VideoClips/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model MvcWebMusica2.Models.VideoClips
 
 @{
-    ViewData["Title"] = "Details de VideoClips";
+    ViewData["Title"] = "Detalles de VideoClips";
 }
 
 <h1>Detalles</h1>
@@ -11,16 +11,16 @@
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Fecha)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Fecha)
-        </dd>
-        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Canciones)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Canciones.Titulo)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Fecha)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Fecha)
         </dd>
     </dl>
 </div>
