--- a/MvcWebMusica2/Views/VideoClips/Index.cshtml
+++ b/MvcWebMusica2/Views/VideoClips/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<MvcWebMusica2.Models.VideoClips>
 
 @{
-    ViewData["Title"] = "Index de VideoClips";
+    ViewData["Title"] = "VideoClips";
 }
 
 <h1>VideoClips</h1>
@@ -13,10 +13,10 @@
     <thead class="table-primary">
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Fecha)
+                @Html.DisplayNameFor(model => model.Canciones)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Canciones)
+                @Html.DisplayNameFor(model => model.Fecha)
             </th>
             <th></th>
         </tr>
@@ -25,10 +25,10 @@
 @foreach (var item in Model) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.Fecha)
+                @Html.DisplayFor(modelItem => item.Canciones.Titulo)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Canciones.Titulo)
+                @Html.DisplayFor(modelItem => item.Fecha)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id"><i class="fa-solid fa-pen-to-square" title="Editar"></i></a> |
